--- a/PollingStation/PollingStationApp/Layout/MainLayout.razor.css
+++ b/PollingStation/PollingStationApp/Layout/MainLayout.razor.css
@@ -9,16 +9,31 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-color: var(--dark-medium-color);
 }
-
+.toolbar-title-election-badge {
+    border-radius: 6px;
+    font-weight: 500;
+    padding: 2px 10px;
+    transition: background-color .4s ease,color .4s ease;
+    background-color: var(--selected-background-color);
+    color: var(--selected-text-color);
+}
+.top-menu {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    gap: 0.5rem
+}
+.text-muted {
+    color: #838aa0 !important;
+}
 .top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
+    background-color: var(--dark-medium-color);
     height: 3.5rem;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
     .top-row ::deep a, .top-row ::deep .btn-link {
@@ -70,8 +85,4 @@ main {
         width: 0;
     }
 
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
 }
