--- a/PollingStation/PollingStationApp/Pages/Home.razor
+++ b/PollingStation/PollingStationApp/Pages/Home.razor
@@ -1,7 +1,14 @@
 ﻿@page "/"
 
 <PageTitle>Home</PageTitle>
+<div class="content">
+	<div class="card">
+		<div class="card-header">
+			<h1>Hello, world!</h1>
+		</div>
+		<div class="card-body">
+			Welcome to your new app.
+		</div>
+	</div>
+</div>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
