--- a/PollingStation/PollingStationApp/Components/Layout/MainLayout.razor
+++ b/PollingStation/PollingStationApp/Components/Layout/MainLayout.razor
@@ -12,7 +12,7 @@
                 <span class="toolbar-title-election-badge">nr. 113 Strada Steagului</span>
                 <span class="text-muted">@DateTime.Now.ToString("dd MMM yyyy", new CultureInfo("ro-RO"))</span>
             </div>
-            <a class="external-link-button" href="https://login.microsoftonline.com/common/federation/oauth2msa" target="_blank">Autentificare</a>
+            <a class="external-link-button" href="MicrosoftIdentity/Account/SignOut">Log out</a>
         </div>
 
         <article class="page-content">
