--- a/PollingStation/PollingStationApp/Components/_Imports.razor
+++ b/PollingStation/PollingStationApp/Components/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.Identity.Web.UI
 @using Microsoft.JSInterop
 @using PollingStationApp
 @using PollingStationApp.Components
