--- a/Voting/VotingApp/Components/Layout/MainLayout.razor
+++ b/Voting/VotingApp/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using System.Globalization
 
 <div class="page">
     <div class="sidebar">
@@ -7,17 +8,15 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <div class="top-menu">
+                <span class="toolbar-title-election-badge">nr. 113 Strada Steagului</span>
+                <span class="text-muted">@DateTime.Now.ToString("dd MMM yyyy", new CultureInfo("ro-RO"))</span>
+            </div>
+            <a class="external-link-button" href="MicrosoftIdentity/Account/SignOut">Log out</a>
         </div>
 
-        <article class="content px-4">
+        <article class="page-content">
             @Body
         </article>
     </main>
-</div>
-
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
 </div>
