--- a/Voting/VotingApp/Components/Pages/Home.razor
+++ b/Voting/VotingApp/Components/Pages/Home.razor
@@ -1,7 +1,23 @@
 ﻿@page "/"
+@using Microsoft.AspNetCore.Components.Authorization
+@using System.Security.Claims
+@attribute [StreamRendering]
+@rendermode InteractiveServer
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
 <PageTitle>Home</PageTitle>
+<div class="content">
+    <div class="card">
+        <div class="card-header">
+            <h1>Hello, world!</h1>
+        </div>
+        <div class="card-body">
+            Welcome to your new app.
+        </div>
+    </div>
+</div>
 
-<h1>Hello, world!</h1>
+@code {
+    private ClaimsPrincipal? _user;
 
-Welcome to your new app.
+}
