--- a/PollingStation/PollingStationApp/Components/Routes.razor
+++ b/PollingStation/PollingStationApp/Components/Routes.razor
@@ -29,7 +29,7 @@
         try
         {
             // Attempt to acquire the token at startup
-            await TokenService.GetAccessTokenAsync(user);
+            //await TokenService.GetAccessTokenAsync(user);
         }
         catch (InvalidOperationException ex)
         {
