--- a/Voting/VotingApp/Components/Pages/Home.razor
+++ b/Voting/VotingApp/Components/Pages/Home.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @using Microsoft.AspNetCore.Components.Authorization
 @using System.Security.Claims
+@using Microsoft.AspNetCore.SignalR.Client
 @attribute [StreamRendering]
 @rendermode InteractiveServer
 @inject AuthenticationStateProvider AuthenticationStateProvider
@@ -18,6 +19,47 @@
 </div>
 
 @code {
-    private ClaimsPrincipal? _user;
+    private HubConnection hubConnection;
+    private string message = "Waiting for unlock...";
 
+    protected override async Task OnInitializedAsync()
+    {
+        try
+        {
+            hubConnection = new HubConnectionBuilder()
+                .WithUrl("http://localhost:5062/voting") // Use correct hub endpoint
+                .WithAutomaticReconnect()
+                .Build();
+
+            hubConnection.On<string, string>("UnlockApp", async (userId, cabin) =>
+            {
+                await InvokeAsync(() =>
+                {
+                    message = $"Unlocked by {userId} in {cabin}";
+                    Console.WriteLine(message);
+                    StateHasChanged();
+                });
+            });
+
+            await hubConnection.StartAsync();
+
+            if (hubConnection.State == HubConnectionState.Connected)
+            {
+                Console.WriteLine("Connected ... Please type message now");
+                var testMessage = "Hey";
+                Console.WriteLine(hubConnection.ConnectionId);
+                // You can invoke methods here if needed
+            }
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine(ex.Message);
+        }
+    }
+
+    public void Dispose()
+    {
+        _ = hubConnection.DisposeAsync();
+    }
 }
+
