add lock/unlock logic

--- a/PollingStation/PollingStationApp/Components/Pages/Home.razor
+++ b/PollingStation/PollingStationApp/Components/Pages/Home.razor
@@ -41,7 +41,7 @@
         //var token = await TokenProvider.GetAccessTokenAsync(_user);
         //Console.WriteLine($"Token: {token}");
         if(hubConnection!=null)
-            await hubConnection.InvokeAsync("UnlockApp", "user123", "Cabin1");
+            await hubConnection.InvokeAsync("UnlockApp", "2", "1");
     }
     
     
