--- a/Voting/VotingApp/Components/Layout/NavMenu.razor
+++ b/Voting/VotingApp/Components/Layout/NavMenu.razor
@@ -21,7 +21,7 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <i class="polling-station-icon navmenu-icon fa-solid fa-house"></i>
-                <span class="title">@(UserOnlineService.CabinNumber ?? "Neînregistrat")</span>
+                <span class="title">Cabina nr. @(UserOnlineService.CabinNumber ?? "Neînregistrat")</span>
             </NavLink>
         </div>
         <div class="nav-item px-3">
