fix signalR disconnecting

--- a/PollingStation/PollingStationApp/Components/Pages/Home.razor
+++ b/PollingStation/PollingStationApp/Components/Pages/Home.razor
@@ -37,7 +37,8 @@
         {
             hubConnection = new HubConnectionBuilder()
                 .WithUrl($"{baseUrl}/voting") // Change to your actual hub endpoint
-                .Build();
+                .WithAutomaticReconnect()
+            .Build();
 
             await hubConnection.StartAsync();
         }
